--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -1,150 +1,161 @@
 <section class="fruits" id="fruits">
-    <div class="container">
-        <div class="fruit-header">
-        <div class="fruit-header-container">
-            <h2>Organic Fruits</h2>
-            <p>Our organic fruits are hand-picked from local farms and delivered straight to your doorstep, 
-            ensuring that you get the freshest and most nutritious produce possible. 
-            We offer a wide selection of organic fruits grown without the use of harmful pesticides or chemicals.
-            </p>
-        </div>
-        </div>
-
-        <div class="cards-container">
-            <ul class="fruit-cards">
-                <li class="card one">
-                    <div class="card-inside">
-                        <h3>Strawberry</h3>
-                        <p>Plant</p>
-                        <img 
-                        srcset="/src/images/fruits-strawberry.png x1"
-                        srcset="/src/images/fruits-strawberry@2x.png x2"
-                        src="/src/images/fruits-strawberry.png" 
-                        alt="Strawberry">
-                        <div class="fruits-shadow"></div>
-                        <button>100 UAH / kg</button>
-                    </div>
-                </li>
-                <li class="card two">
-                    <div class="card-inside">
-                        <h3>Banana</h3>
-                        <p>Plant</p>
-                        <img 
-                        srcset="/src/images/fruits-banana.png x1"
-                        srcset="/src/images/fruits-banana@2x.png x2"
-                        src="/src/images/fruits-banana.png" 
-                        alt="Banana">
-                        <div class="fruits-shadow"></div>
-                        <button>80 UAH / kg</button>
-                    </div>
-                </li>
-                <li class="card three">
-                    <div class="card-inside">
-                        <h3>Watermelon</h3>
-                        <p>Plant</p>
-                        <img 
-                        srcset="/src/images/fruits-watermelon.png x1"
-                        srcset="/src/images/fruits-watermelon@2x.png x2"
-                        src="/src/images/fruits-watermelon.png" 
-                        alt="Watermelon">
-                        <div class="fruits-shadow"></div>
-                        <button>40 UAH / kg</button>
-                    </div>
-                </li>
-                <li class="card four">
-                    <div class="card-inside">
-                        <h3>Lime</h3>
-                        <p>Plant</p>
-                        <img 
-                        srcset="/src/images/fruits-lime.png x1"
-                        srcset="/src/images/fruits-lime@2x.png x2"
-                        src="/src/images/fruits-lime.png" 
-                        alt="Lime">
-                        <div class="fruits-shadow"></div>
-                        <button>60 UAH / kg</button>
-                    </div>
-                </li>
-                <li class="card five">
-                    <div class="card-inside">
-                        <h3>Apple</h3>
-                        <p>Plant</p>
-                        <img 
-                        srcset="/src/images/fruits-apple.png x1"
-                        srcset="/src/images/fruits-apple@2x.png x2"
-                        src="/src/images/fruits-apple.png" 
-                        alt="Apple">
-                        <div class="fruits-shadow"></div>
-                        <button>50 UAH / kg</button>
-                    </div>
-                </li>
-                <li class="card six">
-                    <div class="card-inside">
-                        <h3>Peach</h3>
-                        <p>Plant</p>
-                        <img 
-                        srcset="/src/images/fruits-peach.png x1"
-                        srcset="/src/images/fruits-peach@2x.png x2"
-                        src="/src/images/fruits-peach.png" 
-                        alt="Peach">
-                        <div class="fruits-shadow"></div>
-                        <button>80 UAH / kg</button>
-                    </div>
-                </li>
-                <li class="card seven">
-                    <div class="card-inside">
-                        <h3>Plums</h3>
-                        <p>Plant</p>
-                        <img 
-                        srcset="/src/images/fruits-plums.png x1"
-                        srcset="/src/images/fruits-plums@2x.png x2"
-                        src="/src/images/fruits-plums.png" 
-                        alt="Plums">
-                        <div class="fruits-shadow"></div>
-                        <button>40 UAH / kg</button>
-                    </div>
-                </li>
-                <li class="card eight">
-                    <div class="card-inside">
-                        <h3>Orange</h3>
-                        <p>Plant</p>
-                        <img 
-                        srcset="/src/images/fruits-orange.png x1"
-                        srcset="/src/images/fruits-orange@2x.png x2"
-                        src="/src/images/fruits-orange.png" 
-                        alt="Orange">
-                        <div class="fruits-shadow"></div>
-                        <button>60 UAH / kg</button>
-                    </div>
-                </li>
-                <li class="card nine">
-                    <div class="card-inside">
-                        <h3>Kiwi</h3>
-                        <p>Plant</p>
-                        <img 
-                        srcset="/src/images/fruits-kiwi.png x1"
-                        srcset="/src/images/fruits-kiwi@2x.png x2"
-                        src="/src/images/fruits-kiwi.png" 
-                        alt="Kiwi">
-                        <div class="fruits-shadow"></div>
-                        <button>90 UAH / kg</button>
-                    </div>
-                </li>
-            </ul>
-        </div>
-
-        <div class="order-btn">
-        <button id="order-btn-click">
-            <svg class="arrow-order-btn" width="14" height="14">
-                <use href="/src/images/icons.svg#icon-arrow"></use>
-            </svg>
-            Order
-        </button>
-        </div>
+  <div class="container">
+    <div class="fruit-header">
+      <div class="fruit-header-container">
+        <h2>Organic Fruits</h2>
+        <p>
+          Our organic fruits are hand-picked from local farms and delivered straight to your
+          doorstep, ensuring that you get the freshest and most nutritious produce possible. We
+          offer a wide selection of organic fruits grown without the use of harmful pesticides or
+          chemicals.
+        </p>
+      </div>
     </div>
+
+    <div class="cards-container">
+      <ul class="fruit-cards">
+        <li class="card one">
+          <div class="card-inside">
+            <h3>Strawberry</h3>
+            <p>Plant</p>
+            <img
+              srcset="/src/images/fruits-strawberry.png x1"
+              srcset="/src/images/fruits-strawberry@2x.png x2"
+              src="/src/images/fruits-strawberry.png"
+              alt="Strawberry"
+            />
+            <div class="fruits-shadow"></div>
+            <button>100 UAH / kg</button>
+          </div>
+        </li>
+        <li class="card two">
+          <div class="card-inside">
+            <h3>Banana</h3>
+            <p>Plant</p>
+            <img
+              srcset="/src/images/fruits-banana.png x1"
+              srcset="/src/images/fruits-banana@2x.png x2"
+              src="/src/images/fruits-banana.png"
+              alt="Banana"
+            />
+            <div class="fruits-shadow"></div>
+            <button>80 UAH / kg</button>
+          </div>
+        </li>
+        <li class="card three">
+          <div class="card-inside">
+            <h3>Watermelon</h3>
+            <p>Plant</p>
+            <img
+              srcset="/src/images/fruits-watermelon.png x1"
+              srcset="/src/images/fruits-watermelon@2x.png x2"
+              src="/src/images/fruits-watermelon.png"
+              alt="Watermelon"
+            />
+            <div class="fruits-shadow"></div>
+            <button>40 UAH / kg</button>
+          </div>
+        </li>
+        <li class="card four">
+          <div class="card-inside">
+            <h3>Lime</h3>
+            <p>Plant</p>
+            <img
+              srcset="/src/images/fruits-lime.png x1"
+              srcset="/src/images/fruits-lime@2x.png x2"
+              src="/src/images/fruits-lime.png"
+              alt="Lime"
+            />
+            <div class="fruits-shadow"></div>
+            <button>60 UAH / kg</button>
+          </div>
+        </li>
+        <li class="card five">
+          <div class="card-inside">
+            <h3>Apple</h3>
+            <p>Plant</p>
+            <img
+              srcset="/src/images/fruits-apple.png x1"
+              srcset="/src/images/fruits-apple@2x.png x2"
+              src="/src/images/fruits-apple.png"
+              alt="Apple"
+            />
+            <div class="fruits-shadow"></div>
+            <button>50 UAH / kg</button>
+          </div>
+        </li>
+        <li class="card six">
+          <div class="card-inside">
+            <h3>Peach</h3>
+            <p>Plant</p>
+            <img
+              srcset="/src/images/fruits-peach.png x1"
+              srcset="/src/images/fruits-peach@2x.png x2"
+              src="/src/images/fruits-peach.png"
+              alt="Peach"
+            />
+            <div class="fruits-shadow"></div>
+            <button>80 UAH / kg</button>
+          </div>
+        </li>
+        <li class="card seven">
+          <div class="card-inside">
+            <h3>Plums</h3>
+            <p>Plant</p>
+            <img
+              srcset="/src/images/fruits-plums.png x1"
+              srcset="/src/images/fruits-plums@2x.png x2"
+              src="/src/images/fruits-plums.png"
+              alt="Plums"
+            />
+            <div class="fruits-shadow"></div>
+            <button>40 UAH / kg</button>
+          </div>
+        </li>
+        <li class="card eight">
+          <div class="card-inside">
+            <h3>Orange</h3>
+            <p>Plant</p>
+            <img
+              srcset="/src/images/fruits-orange.png x1"
+              srcset="/src/images/fruits-orange@2x.png x2"
+              src="/src/images/fruits-orange.png"
+              alt="Orange"
+            />
+            <div class="fruits-shadow"></div>
+            <button>60 UAH / kg</button>
+          </div>
+        </li>
+        <li class="card nine">
+          <div class="card-inside">
+            <h3>Kiwi</h3>
+            <p>Plant</p>
+            <img
+              srcset="/src/images/fruits-kiwi.png x1"
+              srcset="/src/images/fruits-kiwi@2x.png x2"
+              src="/src/images/fruits-kiwi.png"
+              alt="Kiwi"
+            />
+            <div class="fruits-shadow"></div>
+            <button>90 UAH / kg</button>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="order-btn">
+      <button id="order-btn-click">
+        <svg class="arrow-order-btn" width="14" height="14">
+          <use href="/src/images/icons.svg#icon-arrow"></use>
+        </svg>
+        Order
+      </button>
+    </div>
+  </div>
 </section>
 
 <script>
-    document.querySelector('#order-btn-click').addEventListener('click', () => {
-      document.querySelector('#modal-thankyou').classList.add('is-closed');
-    });
-  </script>
+  document.querySelector('#order-btn-click').addEventListener('click', () => {
+    document.querySelector('#modal-yourorder').classList.remove('is-closed');
+  });
+</script>
