--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
         <li><a href="#fruits" class="link">Fruits</a></li>
         <li><a href="#contacts" class="link">Contacts</a></li>
         <li class="icon-wrap">
-          <svg class="icon icon-basket-white" width="28" height="28">
+          <svg class="icon icon-basket-white" width="28" height="28" id="header-basket-white">
             <use xlink:href="./images/icons.svg#icon-basket-white"></use>
           </svg>
         </li>
@@ -46,6 +46,10 @@
   });
 
   document.querySelector('#header-basket').addEventListener('click', () => {
+    modalYourOrder.classList.remove('is-closed');
+  });
+
+  document.querySelector('#header-basket-white').addEventListener('click', () => {
     modalYourOrder.classList.remove('is-closed');
   });
 </script>
