--- a/src/partials/yourorder.html
+++ b/src/partials/yourorder.html
@@ -218,5 +218,6 @@
 
   document.querySelector('#modal-btn-submit').addEventListener('submit', () => {
     modalYourOrder.classList.add('is-closed');
+    document.querySelector('#modal-thankyou').classList.remove('is-closed');
   });
 </script>
