--- a/src/partials/yourorder.html
+++ b/src/partials/yourorder.html
@@ -14,7 +14,7 @@
     <div class="modal-fruits">
       <ul class="fruits-cards">
         <li class="fruits-card">
-          <div class="basket first">
+          <div class="basket first" id="checkbox-input-one">
             <div class="basket-info">
               <h3 class="basket-title">Strawberry Basket</h3>
               <p class="basket-text">Plant</p>
@@ -52,14 +52,14 @@
                 />
               </picture>
             </div>
-            <div class="basket-checkbox" id="checkbox-input-one">
+            <div class="basket-checkbox">
               <input class="checkbox-input" type="checkbox" />
               <svg class="checkbox-icon is-hidden" id="checkbox-icon-one" width="8" height="8">
                 <use href="./images/icons.svg#icon-checkbox-pick"></use>
               </svg>
             </div>
           </div>
-          <div class="basket second">
+          <div class="basket second" id="checkbox-input-two">
             <div class="basket-info">
               <h3 class="basket-title">Apple Basket</h3>
               <p class="basket-text">Plant</p>
@@ -97,14 +97,14 @@
                 />
               </picture>
             </div>
-            <div class="basket-checkbox" id="checkbox-input-two">
+            <div class="basket-checkbox">
               <input class="checkbox-input" type="checkbox" />
               <svg class="checkbox-icon is-hidden" id="checkbox-icon-two" width="8" height="8">
                 <use href="./images/icons.svg#icon-checkbox-pick"></use>
               </svg>
             </div>
           </div>
-          <div class="basket third">
+          <div class="basket third" id="checkbox-input-three">
             <div class="basket-info">
               <h3 class="basket-title">Fruits Basket</h3>
               <p class="basket-text">Plant</p>
@@ -142,7 +142,7 @@
                 />
               </picture>
             </div>
-            <div class="basket-checkbox" id="checkbox-input-three">
+            <div class="basket-checkbox">
               <input class="checkbox-input" type="checkbox" />
               <svg class="checkbox-icon is-hidden" id="checkbox-icon-three" width="8" height="8">
                 <use class="checkbox-icons" href="./images/icons.svg#icon-checkbox-pick"></use>
