--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
         <li><a href="#fruits" class="link">Fruits</a></li>
         <li><a href="#contacts" class="link">Contacts</a></li>
       </ul>
-      <ul class="list off-screen-menu">
+      <ul class="list off-screen-menu" id="off-screen-menu">
         <li><a href="#how-it-works" class="link">How It Works</a></li>
         <li><a href="#fruits" class="link">Fruits</a></li>
         <li><a href="#contacts" class="link">Contacts</a></li>
@@ -38,7 +38,7 @@
 
 <script>
   const hamMenu = document.querySelector('#ham-menu');
-  const offScreenMenu = document.querySelector('.off-screen-menu');
+  const offScreenMenu = document.querySelector('#off-screen-menu');
 
   hamMenu.addEventListener('click', () => {
     hamMenu.classList.toggle('active');
