--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -38,7 +38,7 @@
 
 <script>
   const hamMenu = document.querySelector('#ham-menu');
-  const offScreenMenu = document.querySelector('#off-screen-menu');
+  const offScreenMenu = document.querySelector('.off-screen-menu');
 
   hamMenu.addEventListener('click', () => {
     hamMenu.classList.toggle('active');
