--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
         <li><a href="#fruits" class="link">Fruits</a></li>
         <li><a href="#contacts" class="link">Contacts</a></li>
       </ul>
-      <ul class="list off-screen-menu" id="off-screen-menu">
+      <ul class="list off-screen-menu">
         <li><a href="#how-it-works" class="link">How It Works</a></li>
         <li><a href="#fruits" class="link">Fruits</a></li>
         <li><a href="#contacts" class="link">Contacts</a></li>
@@ -22,7 +22,7 @@
         </svg>
         <a href="./index.html" class="logo-text">fresh harvest box </a>
       </div>
-      <div class="ham-menu" id="ham-menu">
+      <div class="ham-menu">
         <span></span>
         <span></span>
         <span></span>
@@ -37,7 +37,7 @@
 </header>
 
 <script>
-  const hamMenu = document.querySelector('#ham-menu');
+  const hamMenu = document.querySelector('.ham-menu');
   const offScreenMenu = document.querySelector('.off-screen-menu');
 
   hamMenu.addEventListener('click', () => {
